Fixed stream checker not working when stream is offline Stream checker can now be restarted on demand Stream checker is restarted when a "channel" config is changed Re-written config class for new annotation format Cleaned up TCDrawScreen a bit Added localisation for any text shown in-game

--- a/src/main/resources/assets/twitchy/lang/en_us.lang
+++ b/src/main/resources/assets/twitchy/lang/en_us.lang
@@ -1,5 +1,11 @@
-#Commands
+#PARSE_ESCAPES
 
-#Misc
-press.for.info.name=Press %s for more information
+twitchy.tooltip.title=Stream Title:
+twitchy.tooltip.game=Current Game:
+twitchy.tooltip.viewers=Current Viewers:
+twitchy.tooltip.watch.1=Click to watch
+twitchy.tooltip.watch.2=live on Twitch!
+twitchy.tooltip.offline='s offline. Click to go to their channel.
+twitchy.tooltip.info=Press %s for more information
 
+twitchy.config.title=Twitchy Configs
