--- a/src/main/resources/assets/twitchy/lang/en_us.lang
+++ b/src/main/resources/assets/twitchy/lang/en_us.lang
@@ -1,11 +1,10 @@
 #PARSE_ESCAPES
 
-twitchy.tooltip.title=Stream Title:
-twitchy.tooltip.game=Current Game:
-twitchy.tooltip.viewers=Current Viewers:
-twitchy.tooltip.watch.1=Click to watch
-twitchy.tooltip.watch.2=live on Twitch!
-twitchy.tooltip.offline='s offline. Click to go to their channel.
+twitchy.tooltip.title=Stream Title: %s
+twitchy.tooltip.game=Current Game: %s
+twitchy.tooltip.viewers=Current Viewers: %s
+twitchy.tooltip.watch=Click to watch %s on Twitch!
+twitchy.tooltip.offline=%s all Streamers are offline Click to go to the config screen.
 twitchy.tooltip.info=Press %s for more information
 
 twitchy.config.title=Twitchy Configs
