Added toggle dismissing icon using keybind and Alt + Right Click Fixed some general issues

--- a/src/main/resources/assets/twitchy/lang/en_us.lang
+++ b/src/main/resources/assets/twitchy/lang/en_us.lang
@@ -13,3 +13,6 @@ twitchy.stream.preview=Press %s to see a preview!
 twitchy.stream.watch=Click to watch %s on Twitch!
 
 twitchy.config.title=Twitchy Configs
+
+key.twitchy.category=Twitchy
+key.twitchy.dismiss=Dismiss icon
