adding back in the right click toggle bright added
I just added back in the alt+rc function bright put in, but also added a tooltip to inform users.

--- a/src/main/resources/assets/twitchy/lang/en_us.lang
+++ b/src/main/resources/assets/twitchy/lang/en_us.lang
@@ -1,6 +1,7 @@
 #PARSE_ESCAPES
 
 twitchy.icon.info=%s to get to the config menu!
+twitchy.icon.info.right=%s anywhere to toggle the icon!
 twitchy.icon.expand=Click to expand the menu!
 twitchy.icon.collapse=Click to collapse the menu!
 
