--- a/src/main/resources/assets/streamy/lang/en_us.lang
+++ b/src/main/resources/assets/streamy/lang/en_us.lang
@@ -5,15 +5,20 @@ streamy.icon.info.right=%s anywhere to toggle the icon!
 streamy.icon.expand=Click to expand the menu!
 streamy.icon.collapse=Click to collapse the menu!
 
-streamy.stream.broadcaster=%s is currently live!
+streamy.stream.broadcaster=%s is currently live on %s!
 streamy.stream.title=Stream Title: %s
 streamy.stream.game=Current Game: %s
 streamy.stream.viewers=Current Viewers: %s
 streamy.stream.offline=%s is currently offline!
 streamy.stream.preview=Press %s to see a preview!
-streamy.stream.watch=Click to watch %s on Twitch!
+streamy.stream.channel=Click to go to %s's channel on %s!
+streamy.stream.watch=Click to watch %s on %s!
 
-streamy.config.title=Twitchy Configs
+streamy.config.title=Streamy Configs
 
-key.streamy.category=Twitchy
+streamy.source.twitch=Twitch
+streamy.source.mixer=Mixer
+streamy.source.youtube=YouTube
+
+key.streamy.category=Streamy
 key.streamy.dismiss=Dismiss icon
