--- a/src/main/resources/assets/streamy/lang/en_us.lang
+++ b/src/main/resources/assets/streamy/lang/en_us.lang
@@ -1,9 +1,11 @@
 #PARSE_ESCAPES
 
-streamy.icon.info=%s to get to the config menu!
-streamy.icon.info.right=%s anywhere to toggle the icon!
 streamy.icon.expand=Click to expand the menu!
 streamy.icon.collapse=Click to collapse the menu!
+streamy.icon.toggle=§eALT + Right-Click§r anywhere to toggle the icon!
+streamy.icon.config=§9ALT + Click§r to get to the config menu!
+streamy.icon.rotate=§dCTRL + Click§r to change the direction of the streamer list!
+streamy.icon.drag=§2SHIFT + Click + Drag§r to move the icon around!
 
 streamy.stream.broadcaster=%s is currently live on %s!
 streamy.stream.title=Stream Title: %s
